[gd_scene load_steps=5 format=3 uid="uid://cjlbg3xfqffwq"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_lmjif"]
[ext_resource type="PackedScene" uid="uid://wyas78h11w3c" path="res://Scenes/health_component.tscn" id="3_xvn8g"]
[ext_resource type="PackedScene" uid="uid://bq2gl0u2g5fgn" path="res://Scenes/hurtbox_component.tscn" id="4_30b5k"]
[ext_resource type="PackedScene" uid="uid://c2bbmdsd1d3ac" path="res://Scenes/hitbox_component.tscn" id="4_cdd0w"]

[node name="Enemy" type="CharacterBody3D" groups=["Enemy"]]
collision_layer = 12
collision_mask = 3
script = ExtResource("1_lmjif")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.426432, -0.0258331)

[node name="HealthComponent" parent="." instance=ExtResource("3_xvn8g")]
max_health = 50

[node name="HurtboxComponent" parent="." instance=ExtResource("4_30b5k")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.426432, -0.0258331)

[node name="HitboxComponent" parent="." groups=["Enemy"] instance=ExtResource("4_cdd0w")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]

[connection signal="defeated" from="HealthComponent" to="." method="_on_health_component_defeated"]
